fix minor gap in videoplayer

--- a/app/assets/stylesheets/controllers/welcome.css.scss
+++ b/app/assets/stylesheets/controllers/welcome.css.scss
@@ -163,7 +163,7 @@ body.welcome {
   }
   .vplayer-box {
     text-align: center;
-    max-width: 656px;
+    max-width: 648px;
     border: 4px solid #8E958A;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
